--- a/new-school/package.json
+++ b/new-school/package.json
@@ -1,24 +1,23 @@
 {
+  "dependencies": {
+    "angular": "^1.6.2"
+  },
   "devDependencies": {
+    "@types/angular": "^1.6.6",
+    "@types/angular-mocks": "^1.5.9",
     "@types/jquery": "^2.0.40",
+    "angular-mocks": "^1.6.2",
+    "gulp-angular-templatecache": "^2.0.0",
     "del": "^2.2.2",
     "gulp": "gulpjs/gulp#4ed9a4a3275559c73a396eff7e1fde3824951ebb",
     "gulp-hub": "frankwallis/gulp-hub#d461b9c700df9010d0a8694e4af1fb96d9f38bf4",
     "gulp-filter": "^5.0.0",
     "gulp-util": "^3.0.8",
-    "gulp-useref": "^3.1.2",
-    "lazypipe": "^1.0.1",
-    "gulp-postcss": "^6.3.0",
-    "autoprefixer": "^6.7.3",
-    "gulp-rev": "^7.1.2",
-    "gulp-rev-replace": "^0.4.3",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-uglify": "^2.0.1",
-    "uglify-save-license": "^0.4.1",
-    "gulp-cssnano": "^2.1.2",
+    "gulp-angular-filesort": "^1.1.1",
     "gulp-htmlmin": "^3.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-ng-annotate": "^2.0.0",
+    "gulp-less": "^3.3.0",
     "browser-sync": "^2.18.8",
     "browser-sync-spa": "^1.0.3",
     "karma": "^1.4.1",
@@ -27,19 +26,33 @@
     "karma-junit-reporter": "^1.2.0",
     "jasmine": "^2.5.3",
     "es6-shim": "^0.35.3",
+    "karma-angular-filesort": "^1.0.2",
     "karma-ng-html2js-preprocessor": "^1.0.0",
     "karma-es6-shim": "^1.0.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "bower": "^1.8.0",
-    "gulp-inject": "^4.2.0",
-    "main-bower-files": "^2.13.1",
-    "wiredep": "^4.0.0",
-    "gulp-typescript": "^3.1.5",
+    "karma-webpack": "^2.0.2",
+    "webpack": "^2.2.1",
+    "html-webpack-plugin": "^2.28.0",
+    "style-loader": "^0.13.1",
+    "css-loader": "^0.26.1",
+    "postcss-loader": "^1.3.1",
+    "autoprefixer": "^6.7.3",
+    "json-loader": "^0.5.4",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "webpack-fail-plugin": "^1.0.5",
+    "ng-annotate-loader": "^0.2.0",
+    "html-loader": "^0.4.4",
+    "ts-loader": "^2.0.0",
+    "less-loader": "^2.2.3",
+    "less": "^2.7.2",
     "eslint": "^3.15.0",
     "eslint-config-xo-space": "^0.15.0",
-    "gulp-eslint": "^3.0.1",
+    "eslint-config-angular": "^0.5.0",
+    "eslint-plugin-angular": "^1.6.1",
+    "eslint-loader": "^1.6.1",
+    "babel-loader": "^6.3.2",
     "babel-eslint": "^7.1.1",
     "eslint-plugin-babel": "^4.0.1",
     "tslint": "^4.4.2",
@@ -47,15 +60,14 @@
     "@types/node": "^7.0.5",
     "@types/es6-shim": "^0.31.32",
     "@types/jasmine": "^2.5.43",
-    "gulp-tslint": "^7.1.0"
+    "tslint-loader": "^3.4.2"
   },
   "scripts": {
     "build": "gulp",
     "serve": "gulp serve",
     "serve:dist": "gulp serve:dist",
     "test": "gulp test",
-    "test:auto": "gulp test:auto",
-    "bower": "bower"
+    "test:auto": "gulp test:auto"
   },
   "eslintConfig": {
     "globals": {
