added Typescript sources

--- a/new-school/tsconfig.json
+++ b/new-school/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+
+    "target": "es5",
+
     "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
